Refactored _.id layout, supports horizontal scrollbar. Fixed LeaveScenario when logging out

--- a/client/assets/styles/_mixins.scss
+++ b/client/assets/styles/_mixins.scss
@@ -6,6 +6,11 @@
   align-items: center;
 }
 
+@mixin sticky {
+  position: sticky;
+  z-index: $buefyOverlapIndex + 1;
+}
+
 @mixin absoluteMask {
   position: absolute;
   width: 100%;
